--- a/ServersMods/locales/Emu-LocalePO-1.0.0/db/locales/po/menu.json
+++ b/ServersMods/locales/Emu-LocalePO-1.0.0/db/locales/po/menu.json
@@ -18,7 +18,7 @@
             "213 - Error connecting to auth server": "Autorização está indisponível agora, por favor tente mais tarde.",
             "230 - MAX LOGIN COUNT": "Você alcançou o máximo de tentativas. Tente novamente mais tarde",
             "Place in queue:": "Lugar na fila:",
-            "206 - Wrong email or password": "Wrong email or password",
+            "206 - Wrong email or password": "Email ou senha incorretos",
             "240 - Servers temporarily unavailable. Please, try later.": "Manutenção do servidor",
             "BATTLEYE_ServiceNotRunningProperly": "O anticheat está rodando incorretamente. Reinicialização do jogo necessária",
             "BATTLEYE_UnknownRestartReason": "O anticheat está rodando incorretamente. Reinicialização do jogo necessária",
