--- a/ServersMods/locales/Emu-LocaleCH-1.0.0/db/locales/ch/menu.json
+++ b/ServersMods/locales/Emu-LocaleCH-1.0.0/db/locales/ch/menu.json
@@ -18,7 +18,7 @@
             "213 - Error connecting to auth server": "授权当前不可用，请稍后再试。",
             "230 - MAX LOGIN COUNT": "您的重试次数已达最高，请稍后再试",
             "Place in queue:": "在队列中的位置:",
-            "206 - Wrong email or password": "Wrong email or password",
+            "206 - Wrong email or password": "邮箱或密码错误",
             "240 - Servers temporarily unavailable. Please, try later.": "服务器维护中",
             "BATTLEYE_ServiceNotRunningProperly": "反作弊运行不正确。游戏需要重新启动",
             "BATTLEYE_UnknownRestartReason": "反作弊运行错误。 游戏需要重新启动",
