--- a/ServersMods/locales/Emu-LocaleES-MX-1.0.0/db/locales/es-mx/menu.json
+++ b/ServersMods/locales/Emu-LocaleES-MX-1.0.0/db/locales/es-mx/menu.json
@@ -18,7 +18,7 @@
             "213 - Error connecting to auth server": "La autorización no está disponible en estos momentos, por favor, inténtelo de nuevo más tarde.",
             "230 - MAX LOGIN COUNT": "Has alcanzado el número máximo de intentos. Prueba de nuevo más tarde",
             "Place in queue:": "Puesto en la cola:",
-            "206 - Wrong email or password": "Wrong email or password",
+            "206 - Wrong email or password": "Correo electrónico o contraseña incorrectos",
             "240 - Servers temporarily unavailable. Please, try later.": "Servidor en mantenimiento",
             "BATTLEYE_ServiceNotRunningProperly": "El Anticheat se ejecutó de forma incorrecta. Reinicia el juego",
             "BATTLEYE_UnknownRestartReason": "El Anticheat se ejecutó de forma incorrecta. Reinicia el juego",
