--- a/ServersMods/locales/Emu-LocaleES-1.0.0/db/locales/es/menu.json
+++ b/ServersMods/locales/Emu-LocaleES-1.0.0/db/locales/es/menu.json
@@ -18,7 +18,7 @@
             "213 - Error connecting to auth server": "Error 213 - El proceso de autorización no está disponible en estos momentos, por favor, inténtalo de nuevo más tarde.",
             "230 - MAX LOGIN COUNT": "Error 230 - Has alcanzado el número máximo de intentos. Prueba de nuevo más tarde.",
             "Place in queue:": "Puesto en la cola:",
-            "206 - Wrong email or password": "Wrong email or password",
+            "206 - Wrong email or password": "Correo electrónico o contraseña incorrectos",
             "240 - Servers temporarily unavailable. Please, try later.": "Error 240 - Mantenimiento del servidor en progreso. Por favor, inténtalo de nuevo más tarde.",
             "BATTLEYE_ServiceNotRunningProperly": "El sistema antitrampas no está funcionando correctamente. Reinicia el juego.",
             "BATTLEYE_UnknownRestartReason": "El sistema antitrampas no está funcionando correctamente. Reinicia el juego.",
