--- a/ServersMods/locales/Emu-LocaleCH-1.0.0/db/locales/ch/quest/59f9da6786f774714230d751.json
+++ b/ServersMods/locales/Emu-LocaleCH-1.0.0/db/locales/ch/quest/59f9da6786f774714230d751.json
@@ -3,5 +3,6 @@
 	"description": "5abe61a886f7746ad512da6f",
 	"conditions": {},
 	"name": "",
-	"location": "5704e554d2720bac5b8b456e"
+	"location": "5704e554d2720bac5b8b456e",
+	"startedMessageText": ""
 }
